--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,18 @@ body {
    background: var(--white);
    color: var(--black);
 }
+
+/* preloader */
+
+.preloader {
+   position: fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background: var(--white);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   z-index: 999;
+}
