--- a/css/main.css
+++ b/css/main.css
@@ -35,3 +35,39 @@ body {
    justify-content: center;
    z-index: 999;
 }
+
+/* header */
+
+.header {
+   min-height: 100vh;
+   display: flex;
+   align-items: center;
+   /* for the rest of the elements */
+   position: relative;
+}
+
+@media screen and (max-width: 768px) {
+   .header {
+      background: url("../video/Working-it/Snapshots/Working-it.jpg") center/cover fixed no-repeat;
+   }
+}
+
+.banner {
+   margin-left: 2rem;
+   border-left: 0.5rem solid var(--yellow);
+}
+
+.banner-title {
+   font-size: 3rem;
+   letter-spacing: 0.25rem;
+   margin-left: 1rem;
+   text-transform: uppercase;
+   color: var(--blue);
+}
+
+.banner-title-name {
+   color: var(--yellow);
+   font-size: 4rem;
+   font-style: italic;
+   text-decoration: underline;
+}
