--- a/css/main.css
+++ b/css/main.css
@@ -71,3 +71,20 @@ body {
    font-style: italic;
    text-decoration: underline;
 }
+
+/* video */
+
+.video-container {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   z-index: -1;
+}
+
+.video-item {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
