--- a/css/main.css
+++ b/css/main.css
@@ -137,12 +137,13 @@ body {
    height: 100%;
    background: rgba(255, 201, 20, 0.5);
    z-index: 4;
+   width: 0;
+   overflow: hidden;
+   transition: all 0.5s linear;
 }
 
 .nav-links {
    list-style-type: none;
-   width: 0;
-   overflow: hidden;
 }
 
 .nav-single-link {
@@ -152,6 +153,7 @@ body {
    font-size: 1.5rem;
    padding: 0.5rem 1rem;
    transition: all 0.5s linear;
+   text-transform: capitalize;
 }
 
 .nav-single-link:hover {
