--- a/css/main.css
+++ b/css/main.css
@@ -201,3 +201,46 @@ body {
 .social-icon-instagram {
    color: #cd486d;
 }
+
+/* video switch */
+
+.video-switch-container {
+   display: none;
+}
+
+@media screen and (min-width: 768px) {
+   .video-switch-container {
+      display: block;
+      position: absolute;
+      bottom: 5%;
+      left: 5%;
+      z-index: 3;
+   }
+
+   .video-switch {
+      position: relative;
+      width: 5rem;
+      background: var(--yellow);
+      text-transform: uppercase;
+      display: flex;
+      justify-content: space-between;
+      padding: 0.25rem;
+      cursor: pointer;
+      border-radius: 0.5rem;
+   }
+
+   .video-switch-btn {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 50%;
+      border-radius: 0.5rem;
+      transition: all 0.3s ease;
+      background: var(--blue);
+   }
+
+   .btnSlide {
+      left: 50;
+   }
+}
