--- a/css/main.css
+++ b/css/main.css
@@ -489,3 +489,75 @@ body {
       flex: 0 0 25%;
    }
 }
+
+/* progress */
+
+.progress-img {
+   min-height: 50vh;
+   background: url("../img/contact.jpeg") center/cover fixed no-repeat;
+}
+
+.progress-bar {
+   padding: 0 2rem;
+}
+
+.progress-bar-text {
+   display: flex;
+   justify-content: space-between;
+   margin-bottom: 0.25rem;
+   text-transform: capitalize;
+   color: var(--blue);
+}
+
+.progress-item {
+   margin: 2rem 0;
+}
+
+.progress-bcg {
+   width: 100%;
+   height: 0.7rem;
+   background: var(--grey);
+   position: relative;
+   border-radius: 0.5rem;
+}
+
+.progress-value {
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 100%;
+   width: 50%;
+   background: var(--yellow);
+   border-radius: 0.5rem;
+   transition: all 1s linear;
+}
+
+.progress:hover .progress-value-one {
+   width: 100%;
+}
+
+.progress:hover .progress-value-two {
+   width: 90%;
+}
+
+.progress:hover .progress-value-three {
+   width: 70%;
+}
+
+.progress:hover .progress-value-four {
+   width: 60%;
+}
+
+.progress-item {
+   flex: 0 0 50%;
+}
+
+.progress-info {
+   align-self: center;
+}
+
+@media screen and (min-width: 992px) {
+   .progress-img {
+      clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
+   }
+}
