--- a/css/main.css
+++ b/css/main.css
@@ -573,3 +573,112 @@ body {
       clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
    }
 }
+
+/* about */
+
+.about {
+   background: var(--grey);
+   color: var(--black);
+}
+
+.about-img {
+   min-height: 60vh;
+   display: flex;
+   justify-content: center;
+}
+
+.about-img-container {
+   flex: 0 0 80%;
+   background: var(--yellow);
+   display: flex;
+   flex-direction: column;
+   padding: 2rem 1rem;
+   border-radius: 0.25rem;
+}
+
+.about-img-name {
+   text-align: center;
+   text-transform: uppercase;
+   letter-spacing: 0.25rem;
+   font-style: italic;
+}
+
+.about-img-photo {
+   display: block;
+   width: 100%;
+   margin: 1rem 0;
+}
+
+.about-img-text {
+   line-height: 1.5;
+}
+
+.about-info-title {
+   font-size: 2rem;
+   letter-spacing: 0.25rem;
+   text-transform: capitalize;
+   text-align: center;
+   margin-bottom: 1rem;
+}
+
+.accordion {
+   border: 1px solid var(--black);
+   margin: 1rem 0;
+}
+
+.accordion-header {
+   display: flex;
+   background: var(--white);
+   color: var(--black);
+   justify-content: space-between;
+   align-items: baseline;
+   font-size: 1.3rem;
+   text-transform: uppercase;
+   border-bottom: 1px solid var(--black);
+}
+
+.accordion-icon {
+   padding: 0.75rem;
+   background: var(--black);
+   color: var(--yellow);
+   transition: all 0.5s linear;
+}
+
+.accordion-content {
+   padding: 1rem 2rem;
+   line-height: 1.5;
+   background: var(--white);
+   display: none;
+}
+
+.accordion-btn {
+   margin-right: 0.5rem;
+   transition: all 0.5s linear;
+   border: 0.05rem solid var(--black);
+   padding: 0.08rem 0.32rem;
+   border-radius: 0.25rem;
+}
+
+.rotate {
+   transform: rotate(-180deg);
+}
+
+.accordion-header:hover .accordion-icon {
+   background: var(--yellow);
+   color: var(--black);
+}
+
+.accordion-header:hover .accordion-btn {
+   background: var(--yellow);
+}
+
+@media screen and (min-width: 768px) {
+   .about-img {
+      flex: 0 0 calc(40% - 0.5rem);
+   }
+
+   .about-info {
+      flex: 0 0 calc(60% - 0.5rem);
+      align-self: center;
+   }
+}
