number section - html/css

--- a/css/main.css
+++ b/css/main.css
@@ -682,3 +682,49 @@ body {
       align-self: center;
    }
 }
+
+/* numbers */
+
+.number {
+   text-align: center;
+   background: var(--black);
+   color: var(--yellow);
+   transition: all 1s ease-in-out;
+}
+
+.number:hover {
+   background: var(--blue);
+   color: var(--cream);
+}
+
+.number-icon {
+   font-size: 4rem;
+   margin: 1rem 0;
+}
+
+.number-data {
+   font-size: 1.5rem;
+   margin: 1rem 0;
+}
+
+.number-name {
+   text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+   .numbers {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+   }
+
+   .number {
+      flex: 0 0 50%;
+   }
+}
+
+@media screen and (min-width: 992px) {
+   .number {
+      flex: 0 0 25%;
+   }
+}
