--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,10 @@ body {
    color: var(--blue);
 }
 
+.section-title-name-yellow {
+   color: var(--yellow);
+}
+
 .item-margin {
    margin: 2rem 0;
 }
