--- a/css/main.css
+++ b/css/main.css
@@ -1018,3 +1018,74 @@ body {
       width: 70%;
    }
 }
+
+/* quotes */
+
+.quotes {
+   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/quotes-background.jpeg") center/cover no-repeat;
+}
+
+.quote-text {
+   color: var(--white);
+   line-height: 1.5;
+   font-size: 1rem;
+   padding: 0 1rem;
+}
+
+.quote-icon {
+   color: var(--yellow);
+   font-size: 4rem;
+   margin: 0 1rem;
+}
+
+.quote-img {
+   border-radius: 50%;
+   width: 200px;
+   height: 200px;
+   margin: 1rem auto;
+}
+
+.quote-img-1 {
+   background: url("../img/team-1.jpg") center/cover no-repeat;
+}
+
+.quote-img-2 {
+   background: url("../img/team-2.jpg") center/cover no-repeat;
+}
+
+.quote-img-3 {
+   background: url("../img/team-3.jpg") center/cover no-repeat;
+}
+
+.quote-name {
+   font-style: italic;
+   text-transform: capitalize;
+   margin: 0.5rem 0;
+   color: var(--grey);
+}
+
+.quote-job {
+   text-transform: uppercase;
+   color: var(--yellow);
+}
+
+@media screen and (min-width: 768px) {
+   .quote {
+      display: flex;
+      justify-content: center;
+   }
+
+   .quote-text {
+      width: 60%;
+      align-self: center;
+      margin-left: 2rem;
+   }
+
+   .quote-icon {
+      align-self: flex-start;
+   }
+
+   .quote-reverse {
+      flex-direction: row-reverse;
+   }
+}
