--- a/css/main.css
+++ b/css/main.css
@@ -1089,3 +1089,52 @@ body {
       flex-direction: row-reverse;
    }
 }
+
+/* map */
+
+.map {
+   position: relative;
+}
+
+.map-item {
+   text-align: center;
+   padding: 2rem 0;
+}
+
+.map-item-icon {
+   font-size: 2rem;
+   color: var(--yellow);
+}
+
+.map-item-title {
+   text-transform: capitalize;
+   margin: 1rem 0;
+   color: var(--blue);
+}
+
+.map-item-text {
+   width: 50%;
+   margin: 0 auto;
+   color: var(--grey);
+   text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+   .map-info {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90%;
+      background: rgba(46, 40, 42, 0.8);
+   }
+
+   .map-item {
+      flex: 0 0 33.33%;
+      margin: 0;
+   }
+
+   .map-item-text {
+      width: 80%;
+   }
+}
